--- a/src/App.css
+++ b/src/App.css
@@ -260,6 +260,16 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: left;
 }
 
+.image-bg {
+  position: absolute;
+  top: 2.5%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
 .video-bg {
   position: absolute;
   top: 0;
